--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,10 @@ spring.security.oauth2.client.registration.github.client-id=6906300af766548b4ea4
 spring.security.oauth2.client.registration.github.client-secret=5648241d9c546f51ae2db617f96844735474bc83
 logging.level.org.springframework.security=TRACE
 
-spring.datasource.url=jdbc:postgresql://192.168.4.42:5432/postgres
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecoGrad
 spring.datasource.username=postgres
-spring.datasource.password=finkifcse
+spring.datasource.password=Pecatari123!
 ## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
