--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ logging.level.org.springframework.security=TRACE
 
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/ecoGrad
-spring.datasource.username=postgres
-spring.datasource.password=Pecatari123!
+spring.datasource.username=hak
+spring.datasource.password=hak123
 ## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
